--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <mat-nav-list>
-    <a mat-list-item routerLink="/home">Home</a>
-    <a mat-list-item routerLink="/emissions">Emissions Data</a>
-    <a mat-list-item routerLink="/analytics">Analytics</a>
-    <a mat-list-item routerLink="/settings">Settings</a>
-  </mat-nav-list>
-  
+  <a mat-list-item routerLink="/home" routerLinkActive="active-link">Home</a>
+  <a mat-list-item routerLink="/emissions" routerLinkActive="active-link">Emissions Data</a>
+  <a mat-list-item routerLink="/analytics" routerLinkActive="active-link">Analytics</a>
+  <a mat-list-item routerLink="/settings" routerLinkActive="active-link">Settings</a>
+  <a mat-list-item routerLink="/dashboard" routerLinkActive="active-link">Dashboard</a>
+</mat-nav-list>
