--- a/frontend/src/app/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/sidebar/sidebar.component.scss
@@ -1,6 +1,29 @@
-mat-nav-list {
-    width: 250px;
-    background-color: #f5f5f5;
-    height: 100%;
-  }
-  
+// mat-nav-list {
+//   height: 100%;
+//   padding: 0;
+
+//   a {
+//     display: flex;
+//     align-items: center;
+//     padding: 16px 24px;
+//     font-size: 16px;
+//     font-weight: 500;
+//     color: #4a4a4a;
+//     text-decoration: none;
+//     border-left: 4px solid transparent;
+
+//     &:hover {
+//       background-color: #f4f4f4;
+//       border-left: 4px solid #3f51b5;
+//     }
+
+//     &.active {
+//       background-color: #e3e3e3;
+//       border-left: 4px solid #3f51b5;
+//       color: #3f51b5;
+//     }
+//   }
+// }
+.spacer {
+  flex: 1 1 auto;
+}
