--- a/frontend/src/app/components/toolbar/toolbar.component.html
+++ b/frontend/src/app/components/toolbar/toolbar.component.html
@@ -1,8 +1,12 @@
+<!-- <mat-toolbar>
+  <span class="toolbar-title">Scope 3 SaaS Dashboard</span>
+  <div class="profile-icon">
+    <mat-icon>account_circle</mat-icon>
+    <span>User</span>
+  </div>
+</mat-toolbar> -->
 <mat-toolbar color="primary">
-    <span>Scope 3 SaaS Dashboard</span>
-    <span class="spacer"></span>
-    <button mat-icon-button>
-      <mat-icon>account_circle</mat-icon>
-    </button>
-  </mat-toolbar>
-  
+  <span>Scope 3 SaaS Dashboard</span>
+  <span class="spacer"></span>
+  <mat-icon>account_circle</mat-icon>
+</mat-toolbar>
