--- a/frontend/src/app/components/visualization-section/visualization-section.component.scss
+++ b/frontend/src/app/components/visualization-section/visualization-section.component.scss
@@ -1,6 +1,16 @@
-:host {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+.visualization-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+
+  .chart-container {
+    width: 80%;
+    height: 400px;
+
+    .chart {
+      width: 100%;
+      height: 100%;
+    }
   }
-  
+}
