--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
+@import "https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap";
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
