--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <!-- Chat Overlay with Error Boundary -->
-  <app-error-boundary>
+  <!-- <app-error-boundary> -->
     <app-chat></app-chat>
-  </app-error-boundary>
+  <!-- </app-error-boundary> -->
 
   <!-- Master Layout with Error Boundary -->
-  <app-error-boundary>
+  <!-- <app-error-boundary> -->
     <app-master-layout></app-master-layout>
-  </app-error-boundary>
+  <!-- </app-error-boundary> -->
 </div>
 
 
