--- a/frontend/src/app/components/master-layout/master-layout.component.html
+++ b/frontend/src/app/components/master-layout/master-layout.component.html
@@ -1,15 +1,20 @@
+<!-- <mat-sidenav-container>
+  <mat-sidenav mode="side" opened>
+    <app-sidebar></app-sidebar>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <app-toolbar></app-toolbar>
+    <div class="main-content">
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container> -->
 <mat-sidenav-container>
-    <!-- Sidebar -->
-    <mat-sidenav mode="side" opened>
-      <app-sidebar></app-sidebar>
-    </mat-sidenav>
-  
-    <!-- Main Content -->
-    <mat-sidenav-content>
-      <app-toolbar></app-toolbar>
-      <div class="main-content">
-        <router-outlet></router-outlet> <!-- Dynamic Route Content -->
-      </div>
-    </mat-sidenav-content>
-  </mat-sidenav-container>
-  
+  <mat-sidenav mode="side" opened>
+    <app-sidebar></app-sidebar>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <app-toolbar></app-toolbar>
+    <!-- <router-outlet></router-outlet> -->
+  </mat-sidenav-content>
+</mat-sidenav-container>
