--- a/frontend/src/app/components/master-layout/master-layout.component.html
+++ b/frontend/src/app/components/master-layout/master-layout.component.html
@@ -6,6 +6,8 @@
     </mat-sidenav>
     <mat-sidenav-content>
       <router-outlet></router-outlet>
+      <!-- Avatar Component -->
+      <app-avatar></app-avatar>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
