--- a/frontend/src/app/components/toolbar/toolbar.component.html
+++ b/frontend/src/app/components/toolbar/toolbar.component.html
@@ -1,5 +1,10 @@
 <mat-toolbar color="primary">
   <span>Scope 3 SaaS Dashboard</span>
   <span class="spacer"></span>
-  <mat-icon>account_circle</mat-icon>
+  <mat-icon><img
+    class="toolbar-genie-icon"
+    src="../assets/icons/genie.png"
+    alt="Reinitiate Walkthrough"
+    (click)="triggerWalkthrough()"
+  /></mat-icon>
 </mat-toolbar>
