--- a/frontend/src/app/components/toolbar/toolbar.component.scss
+++ b/frontend/src/app/components/toolbar/toolbar.component.scss
@@ -20,4 +20,20 @@ mat-toolbar {
       font-size: 24px;
     }
   }
+  .spacer {
+    flex: 1;
+  }
+  
+  .toolbar-genie-icon {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    margin-right: 16px;
+    transition: transform 0.3s ease;
+  
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
 }
+
