frontend nesting problem fixed and

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,5 +3,6 @@
     <app-chat *ngIf="chatVisible"></app-chat> -->
   
   <!-- Master Layout with Error Boundary -->
-    <app-master-layout></app-master-layout>
+    <!-- <app-master-layout></app-master-layout> -->
+    <router-outlet></router-outlet>
 </div>
