data-upload for ingesting added.

--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -4,4 +4,5 @@
   <a mat-list-item routerLink="/analytics" routerLinkActive="active-link">Analytics</a>
   <a mat-list-item routerLink="/settings" routerLinkActive="active-link">Settings</a>
   <a mat-list-item routerLink="/dashboard" routerLinkActive="active-link">Dashboard</a>
+  <a mat-list-item routerLink="/data-upload" routerLinkActive="active-link">Data Upload</a>
 </mat-nav-list>
