--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,25 @@
-<mat-nav-list>
-  <a mat-list-item routerLink="/home" routerLinkActive="active-link">Home</a>
-  <a mat-list-item routerLink="/emissions" routerLinkActive="active-link">Emissions Data</a>
-  <a mat-list-item routerLink="/analytics" routerLinkActive="active-link">Analytics</a>
-  <a mat-list-item routerLink="/settings" routerLinkActive="active-link">Settings</a>
-  <a mat-list-item routerLink="/dashboard" routerLinkActive="active-link">Dashboard</a>
-</mat-nav-list>
+<div class="sidebar-container">
+  <mat-nav-list>
+    <a mat-list-item routerLink="/home" routerLinkActive="active-link">
+      <mat-icon>home</mat-icon>
+      <span>Home</span>
+    </a>
+    <a mat-list-item routerLink="/dashboard" routerLinkActive="active-link">
+      <mat-icon>dashboard</mat-icon>
+      <span>Dashboard</span>
+    </a>
+    <a mat-list-item routerLink="/emissions" routerLinkActive="active-link">
+      <mat-icon>eco</mat-icon>
+      <span>Emissions Data</span>
+    </a>
+    <a mat-list-item routerLink="/analytics" routerLinkActive="active-link">
+      <mat-icon>analytics</mat-icon>
+      <span>Analytics</span>
+    </a>
+    <mat-divider></mat-divider>
+    <a mat-list-item routerLink="/settings" routerLinkActive="active-link">
+      <mat-icon>settings</mat-icon>
+      <span>Settings</span>
+    </a>
+  </mat-nav-list>
+</div>
