--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,9 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
-@import "https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500,700&display=swap");
+
+html, body {
+  height: 100%;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+
 body {
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    background-color: #f4f4f4;
+  background-color: #fafafa;
+  color: rgba(0, 0, 0, 0.87);
+}
+
+body.dark-theme {
+  background-color: #303030;
+  color: #ffffff;
+
+  .mat-app-background {
+    background-color: #303030;
   }
-  
+
+  .mat-toolbar {
+    background: #424242;
+    color: #ffffff;
+  }
+
+  .mat-card {
+    background: #424242;
+    color: #ffffff;
+  }
+
+  .mat-drawer {
+    background-color: #424242;
+    color: #ffffff;
+  }
+}
