--- a/frontend/src/app/components/canvas/canvas.component.html
+++ b/frontend/src/app/components/canvas/canvas.component.html
@@ -1,4 +1,3 @@
-
 <div *ngFor="let insight of insights">
   <div *ngIf="insight.type === 'tile'" class="tile">
     <h3>{{ insight.title }}</h3>
@@ -14,21 +13,17 @@
     <h3>{{ insight.title }}</h3>
     <apx-chart
       *ngIf="insight.chartType === 'pie' || insight.chartType === 'donut'"
-      [series]="insight.values"
-      [chart]="{ type: insight.chartType }"
-      [labels]="insight.labels"
-      [responsive]="[{ breakpoint: 480, options: { chart: { width: 300 }, legend: { position: 'bottom' } } }]">
+      [series]="insight.chartOptions.series"
+      [chart]="insight.chartOptions.chart"
+      [labels]="insight.chartOptions.labels"
+      [responsive]="insight.chartOptions.responsive">
     </apx-chart>
 
     <apx-chart
       *ngIf="insight.chartType === 'bar'"
-      [series]="[{
-        name: 'Emissions',
-        data: insight.values
-      }]"
-      [chart]="{ type: 'bar', height: 350 }"
-      [xaxis]="{ categories: insight.labels }">
+      [series]="insight.chartOptions.series"
+      [chart]="insight.chartOptions.chart"
+      [xaxis]="insight.chartOptions.xaxis">
     </apx-chart>
-
   </div>
 </div>
