data-upload fixes

--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -18,6 +18,11 @@
     <mat-icon>analytics</mat-icon>
     <span>Analytics</span>
   </a>
+
+  <a mat-list-item routerLink="/data-upload" routerLinkActive="active-link">
+    <mat-icon>upload_file</mat-icon>
+    <span>Data Upload</span>
+  </a>
   
   <mat-divider></mat-divider>
   
